--- a/Views/AdminTags/Add.cshtml
+++ b/Views/AdminTags/Add.cshtml
@@ -1,3 +1,4 @@
+@model Blog.Web.Models.ViewModels.AddTagRequest
 @{
     
 }
@@ -11,12 +12,12 @@
         <form method="post">
             <div class="mb-3">
                 <label class="form-label">Name</label>
-                <input type="text" class="form-control" id="Name" name="name"/>
+                <input type="text" class="form-control" id="Name" name="name" asp-for="Name"/>
             </div>
 
             <div class="mb-3">
                 <label class="form-label">Display Name</label>
-                <input type="text" class="form-control" id="displayName" name="displayName"/>
+                <input type="text" class="form-control" id="displayName" name="displayName" asp-for="DisplayName"/>
             </div>
 
             <div class="mb-3">
