--- a/Views/AdminTags/Add.cshtml
+++ b/Views/AdminTags/Add.cshtml
@@ -5,7 +5,7 @@
 
 <div class="bg-secondary bg-opacity-10 py-2">
     <div class="container">
-        <h1>Add New Tag - Admin Functionality</h1>
+        <h1>Add New Post - Admin Functionality</h1>
 </div>
     </div>
     <div class="container py-5">
@@ -18,6 +18,10 @@
             <div class="mb-3">
                 <label class="form-label">Display Name</label>
                 <input type="text" class="form-control" id="displayName" name="displayName" asp-for="DisplayName"/>
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Blog Post</label>
+                <input type="text" class="form-control" id="BlogPost" name="BlogPost" asp-for="BlogPost"/>
             </div>
 
             <div class="mb-3">
